fix backdrop z-index

--- a/src/Umbraco.Web.UI.Client/src/less/components/application/umb-backdrop.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/application/umb-backdrop.less
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 9999;
+    z-index: @zindexOverlayBackdrop;
     top: 0;
     left: 0;
     pointer-events: none;
